   * Waveform fix for woking with online video files - thx Dheeraj
   * Fix bug when opening a file with video offset - thx OmrSi
   * Do not reapeat colors in color picker - thx SDH Marven
   * Fix cmd line convert issue with ebu stl headerfile - thx Rumczeis
   * Fix image export missing error for last two lines - th Antoine


3.6.5 (19th March 2022)
* NEW:
   * Add audio to text (speech recognition) via Vosk/Kaldi
   * Split of words-without-spaces (via dictionary) in FCE/OCR - thx Dnkhatri
   * Add ASSA tool "Background box generator" - thx Leon
   * Option for auto-gen waveform when opening video - thx jirih/Leon/OmrSi
   * Add "File type associations" in Options - Settings
   * Add "waveform-multi-move" with Ctrl+mouse-move
   * Add burn-in toolbar icon - thx Leon/jaydeflix
   * Add more line witdth (cps) calculation options - thx TL-aalive/Leon
   * Add shortcuts for Tools - Sort By - thx Jolana
   * Add shortcut for re-calc duration to min - thx m0ck69
   * Add shortcut for edit of bookmark - thx OmrSi
   * Add shortcut for copy plain text - thx OmrSi
   * Click "New" while holding down "shift" will keep video - thx Andrebavila
   * Add "continuation style" "trailing ellipsis only" - thx Joel
   * Add "Sort by Gap" - thx Andrebavila
   * Add new image subtitle format TTML with inline base64 images - thx mat
   * Add new text subtitle format - thx Richard
   * Add new json subtitle format - thx Tim
   * Add new text subtitle format - thx jiunyilin
   * Add new readonly text subtitle format - thx Aris
   * Add new Edius subtitle formats - thx Donal
   * Add "Min gap" to "Statistics" - thx Xy
* IMPROVED:
   * Update Bulgarian translation - thx Калин
   * Update Italian translation - thx NAMP/bovirus
   * Update Brazilian Portuguese translation - thx Igor
   * Update Portuguese translation - thx hugok79
   * Update Polish translation - thx admas
   * Update Chinese translation - thx nkh0472
   * Update Finnish translation - thx Teijo S